Working out the maestro chirp loading

--- a/src/views/global/wrapper.html
+++ b/src/views/global/wrapper.html
@@ -22,7 +22,8 @@
 
             <!-- Title -->
             <title>Sample Page Title</title>
-            <link rel="stylesheet" href="/maestro/base/css">
+            <link rel="stylesheet" href="/maestro/css">
+            <link rel="stylesheet" href="/index.css">
 
             <!-- JavaScript -->
       </head>
@@ -31,6 +32,7 @@
             <component name="modalRegister" id="modalRegister"></component>
             <component name="modalVerification" id="modalVerification"></component>
             {{SUBPAGE}} 
-            <script src="/maestro/base/js"></script>
+            <script src="/maestro/js"></script>
+            <script src="/index.js"></script>
       </body>
 </html>
