--- a/src/views/containers/wrapper.html
+++ b/src/views/containers/wrapper.html
@@ -44,7 +44,7 @@
             </style>
             <component name="NavPublic" id="navPublic"></component>
             <main>
-
+                  <component name="ModalRegister" id="modalRegister"></component>
             </main>
             <component name="NavFooter" id="navFooter"></component>
 
