--- a/src/maestro/css/forms.css
+++ b/src/maestro/css/forms.css
@@ -90,11 +90,15 @@
       button.icon i { 
             display           : table-cell;
             width             : 20%;
-            text-align        : right;
-            font-size         : 1em;
-            padding           : 20px 20px 20px 0;
+            text-align        : center;
+            padding           : 20px;
             vertical-align    : middle;
             background        : #000;
+      }
+
+      button.icon i svg { 
+            width             : 30%;
+            height            : 30%;
       }
 
       button.icon span { 
@@ -114,15 +118,17 @@
 
       button.icon.social i { 
             width             : 20%;
+            font-size         : 2em;
       }
 
       button.icon i,
       button.icon span {
             color             : #FFF;
+            transition        : opacity 0.3s ease;  
       }
 
       button.icon span {
-            opacity           : 0.8;
+            opacity           : 0.7;
       }
 
       button.icon:hover i {        
