Chirp flow working, components integrated, queries back in the mix, dropping ORM/ODM for custom

--- a/src/components/modals/ModalRegister/ModalRegister.html
+++ b/src/components/modals/ModalRegister/ModalRegister.html
@@ -3,11 +3,10 @@
             <div class="border-box form">
                   <form action="/auth/register" method="post" id="registerEmail">
                         <h2>[[REGISTER_WITH_EMAIL_ADDRESS]]</h2>
-                        <input type="hidden" name="registerType" value="email" />
                         <div class="form-group" data-validation="email"
-                              data-error="[[Please enter a valid email address]]" data-label="[[Email address]]">
+                              data-error="[[Please enter a valid email address]]" data-label="[[EMAIL_ADDRESS]]">
                               <label for="registerEmail"></label>
-                              <input name="email" type="email" class="form-control" id="registerEmail"
+                              <input name="emailOrPhone" type="email" class="form-control" id="emailOrPhone"
                                     aria-describedby="emailHelp" value="ralph.ferrara@gmail.com">
                         </div>
                         <button class="icon" />
