--- a/src/views/containers/wrapper.html
+++ b/src/views/containers/wrapper.html
@@ -24,7 +24,7 @@
             <meta name="keywords" content="your, keywords, here">
 
             <!-- Stylesheets -->
-            <link rel="stylesheet" href="/maestro/css">
+            <link rel="stylesheet" href="/maestro.css">
             <link rel="stylesheet" href="/index.css">
 
             <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,7 +48,7 @@
             </main>
             <component name="NavFooter" id="navFooter"></component>
 
-            <script src="/maestro/js"></script>
+            <script src="/maestro.js"></script>
             <script src="/index.js"></script>
       </body>
 </html>
