--- a/src/components/navigation/NavPublic/NavPublic.css
+++ b/src/components/navigation/NavPublic/NavPublic.css
@@ -92,6 +92,12 @@
             font-weight             : bold;
             background              : rgba(255,255,255,0.2);
             border-radius           : 5px; 
+            transition              : background-color 0.3s ease;
+      }
+
+      nav.navPublic div.navPublicTop div.navTopAuth button:hover {
+            background              : rgba(255,255,255,1);
+            color                   : #000;
       }
 
       nav.navPublic div.navPublicTop div.navTopAuth button span {
