Worked out all the typescript errors, except for low level unused etc

--- a/src/views/containers/wrapper.html
+++ b/src/views/containers/wrapper.html
@@ -45,6 +45,7 @@
             <component name="NavPublic" id="navPublic"></component>
             <main>
                   <component name="ModalRegister" id="modalRegister"></component>
+                  <component name="ModalVerification" id="modalVerification"></component>
             </main>
             <component name="NavFooter" id="navFooter"></component>
 
