--- a/src/components/modals/ModalVerification/ModalVerification.html
+++ b/src/components/modals/ModalVerification/ModalVerification.html
@@ -3,16 +3,17 @@
       <div class="content"> 
             <a class="close" href="#">&times;</a>
 
-            <hr class="divide">
-
             <form action="/auth/verify" method="post" id="verificationCode">
-                  <h2>[[Enter Verification Code]]</h2>
+                  <h2>[[ENTER_VERIFICATION_CODE]]</h2>
                   
-                  <div class="form-group" data-validation="code" data-error="[[Please enter a valid verification code]]" data-label="[[Verification Code]]">
+                  <input type="hidden" name="registerType" id="registerType" value="" />
+                  <input type="hidden" name="token" id="token" value="" />
+                  
+                  <div class="form-group" data-validation="code" data-error="[[ENTER_VERIFICATION_CODE]]" data-label="[[ENTER_VERIFICATION_CODE]]">
                         <label for="code"></label>
-                        <input name="code" placeholder="" pattern ="\d{6}" maxlength="6" type="text" class="form-control verificationCode" id="code" aria-describedby="" value="">
+                        <input name="code" placeholder="" pattern ="\d{6}" maxlength="6" type="text" class="form-control verificationCode" id="code">
                   </div>
-                  <input type="submit" class="btn btn-primary" value=" [[Verify]] " />
+                  <button type="submit" class="btn btn-primary" />[[C:VERIFY]]</button>
             </form>
 
       </div>
