--- a/src/maestro/css/forms.css
+++ b/src/maestro/css/forms.css
@@ -16,6 +16,10 @@
             vertical-align: baseline;
       }
 
+      /*||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||
+      //|| Form Group
+      //||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
+
       div.form-group {
             padding    : 10px 0;
       }
@@ -48,7 +52,20 @@
             border      : 1px solid #ccc;
             border-radius: 0.5em;
       }
+
+      div.form-group select {
+            display     : block;
+            width       : 100%;
+            padding     : 0.5em;
+            font-size   : 1.5em;
+            border      : 1px solid #ccc;
+            border-radius: 0.5em;
+      }      
       
+      /*||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||
+      //|| Full Button
+      //||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
+
       input.btn.btn-full {
             width       : 100%;
             padding     : 0.5em;
@@ -56,6 +73,10 @@
             border      : 1px solid #ccc;
             border-radius: 10px;
       }
+
+      /*||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||
+      //|| Divider
+      //||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
 
       .divide { 
             border-top        : 1px solid var(--color-border-primary);
@@ -68,11 +89,36 @@
       }
 
       .divide b {
+            position          : absolute;
             display           : inline-block;
-            margin-top        : -21px;
+            margin-top        : -24px;
             background        : #FFF;
-            padding           : 0 10px;
+            padding           : 5px 20px;
+            border-radius     : 30%;
       }
+
+      /*||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||
+      //|| Wrapper Input
+      //||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
+
+      div.form-group div.form-wrap {
+            border            : 1px solid #CCC;
+            border-radius     : 10px;
+      }
+
+      div.form-group div.form-wrap i {
+            font-size         : 2.5em;
+      }
+
+      div.form-group div.form-wrap i svg {
+            width             : 26px;
+            height            : 26px;
+      }
+
+
+      /*||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||
+      //|| Button Icon
+      //||=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-=-==-=-=-=-=-=-=-=-=-=-=-=-=--=-=-=-||*/
 
       button.icon { 
             display           : table;
@@ -97,8 +143,8 @@
       }
 
       button.icon i svg { 
-            width             : 30%;
-            height            : 30%;
+            width             : 32px;
+            height            : 32px;
       }
 
       button.icon span { 
@@ -118,7 +164,7 @@
 
       button.icon.social i { 
             width             : 20%;
-            font-size         : 2em;
+            font-size         : 1em;
       }
 
       button.icon i,
