--- a/src/views/public/home.html
+++ b/src/views/public/home.html
@@ -1,12 +1,3 @@
-<style>
-      section.body {
-            display     : block;
-            margin-top  : 70px;
-            font-size   : 1.2em;
-            text-align  : center;      
-      }
-</style>
-<section class="body">[[Welcome home!  You are logged in as]] {{user.username}}.</section>
-<script>
-      console.log('Home.js loaded');
-</script>
+
+<component src="ModalRegister" id="modalRegister"></component>
+<component src="ModalVerification" id="modalVerification"></component>
