Working on complete page

--- a/src/components/fields/FieldGender/FieldGender.html
+++ b/src/components/fields/FieldGender/FieldGender.html
@@ -1,7 +1,7 @@
 
-<div class="form-group">
+<div class="form-group FieldGender">
       <label for="{{ID}}">{{LABEL}}</label>
-      <select class="form-control gender" id="{{ID}}" placeholder="{{LABEL}}">
+      <select class="form-control gender" id="{{ID}}" placeholder="{{LABEL}}" value="{{USER_GENDER}}">
             {{GENDERS}}
       </select>
 </div>
