--- a/src/components/fields/FieldUsername/FieldUsername.html
+++ b/src/components/fields/FieldUsername/FieldUsername.html
@@ -1,5 +1,6 @@
 
-<div class="form-group">
+<div class="form-group" class="FieldUsername">
       <label for="{{ID}}">{{LABEL}}</label>
       <input type="text" class="form-control username" id="{{ID}}" placeholder="{{LABEL}}" value="{{VALUE}}">
+      <span class="">Would you like to change your username?</span>      
 </div>
