--- a/src/components/modals/ModalLogin/ModalLogin.html
+++ b/src/components/modals/ModalLogin/ModalLogin.html
@@ -10,7 +10,7 @@
                         <label for="registerEmail"></label>
                         <input name="emailOrPhone" type="email" class="form-control" id="emailOrPhone" aria-describedby="emailHelp" value="ralph.ferrara@gmail.com" />
                   </div>
-                  <component src="FieldPassword" label="[[C:PASSWORD]]"></component>
+                  <component src="FieldPassword" label="[[C:PASSWORD]]" id="password" name="password"></component>
 
                   <button class="icon" />
                         <i><FontAwesomeIcon icon="faChevronRight" /></i>
