--- a/src/components/uploads/AvatarUpload/AvatarUpload.html
+++ b/src/components/uploads/AvatarUpload/AvatarUpload.html
@@ -1,5 +1,5 @@
 
-<div class=""">
-      Image Avatar Upload
+<div class="avatarUpload">
+      <img src="{{MEDIA_UPLOAD}}">
       <input type="file" id="avatar" name="avatar" accept="image/*" />
 </div>
