--- a/src/components/fields/FieldPassword/FieldPassword.html
+++ b/src/components/fields/FieldPassword/FieldPassword.html
@@ -2,7 +2,7 @@
 <div class="form-group FieldPassword">
       <label for="{{ID}}">{{LABEL}}</label>
       <div class="form-wrap">
-            <input type="password" class="form-control passwordInput" id="{{ID}}" placeholder="{{LABEL}}" value="{{VALUE}}">
+            <input type="password" class="form-control passwordInput" id="{{ID}}" placeholder="{{LABEL}}" name="{{NAME}}" value="{{VALUE}}">
             <i class="togglePasswordShow"><FontAwesomeIcon icon="faEye" /></i>
       </div>
 </div>
